<resources>
    <string name="app_name">SPlanning Beta</string>

    <!-- Strings for Navigation Drawer -->
    <string name="navigation_drawer_open">Відкрите навігаційне меню</string>
    <string name="navigation_drawer_close">Закрите навігаційне меню</string>
    <string name="nav_statistic">Моя статистика</string>
    <string name="nav_goals">Мої цілі</string>
    <string name="my_tasks">Мої завдання</string>
    <string name="nav_about_us">Про нас</string>
    <string name="account_email">yura.yush@gmail.com</string>

    <!-- Strings for Toolbar -->
    <string name="action_settings">Налаштування</string>
    <string name="action_buy_premium">Отримати преміум</string>
    <string name="action_help">Допомога</string>
    <string name="search_hint">Пошук</string>

    <!-- String Array for Spinner in Main Activity -->
    <string-array name="spinnerList">
        <item>Завдання на сьогодні</item>
        <item>Завдання на завтра</item>
        <item>Відкрити календар</item>
    </string-array>

    <!-- Days  -->
    <string name="monday">Понеділок</string>
    <string name="tuesday">Вівторок</string>
    <string name="wednesday">Середа</string>
    <string name="thursday">Четвер</string>
    <string name="friday">Пятниця</string>
    <string name="saturday">Субота</string>
    <string name="sunday">Неділя</string>

    <!-- Short days for repeatText in AddTaskFragment -->
    <string name="mondayShort">Пн</string>
    <string name="tuesdayShort">Вт</string>
    <string name="wednesdayShort">Ср</string>
    <string name="thursdayShort">Чт</string>
    <string name="fridayShort">Птн</string>
    <string name="saturdayShort">Сб</string>
    <string name="sundayShort">Нд</string>

    <!-- Repeat days -->
    <string name="everyMonday">щопонеділка</string>
    <string name="everyTuesday">щовівторка</string>
    <string name="everyWednesday">щосереди</string>
    <string name="everyThursday">щочетверга</string>
    <string name="everyFriday">щопятниці</string>
    <string name="everySaturday">щосуботи</string>
    <string name="everySunday">щонеділі</string>

    <!-- TaskText validation errors-->
    <string name="shortLengthError">Мінімум 5 символів</string>
    <string name="longLengthError">Задовгий текст</string>

    <!-- Task priority values-->
    <string name="lowPriority">Низький пріоритет</string>
    <string name="middlePriority">Середній пріоритет</string>
    <string name="highPriority">Високий пріоритет</string>


    <!-- Exception values -->
    <string name="cantParseDataFromViewsException">Помилка зчитування даних</string>
    <string name="taskAlreadyExistsInDB">Таке завдання вже є </string>
    <string name="taskNotAddedInDB">Помилка додавання даних в БД</string>
    <string name="dontSetDeadline">Ви не встановили дату дедлайну</string>
    <string name="sameGoalExists">Така ціль вже є</string>
    <string name="cantDeleteGoalException">Проблема з видаленнням цілі. Спробуйте пізніше</string>
    <string name="cantDeleteException">Проблема з видаленнням. Спробуйте пізніше</string>
    <string name="youMustSetFromDateBefore">Спочатку встановіть дату з</string>
    <string name="setDatesFirstly">Спочатку встановіть дати</string>

    <string name="taskAddSuccessfully">Завдання успішно додано</string>
    <string name="taskEditSuccessfully">Завдання успішно оновлено</string>
    <string name="goalAddSuccessfully">Ціль успішно додано</string>
    <string name="goalEditSuccessfully">Ціль успішно оновлено</string>

    <!-- GoalsFragment popup menu -->
    <string name="goalIsDane">Цілі досягнуто</string>
    <string name="editGoal">Редагувати</string>
    <string name="deleteGoal">Видалити ціль</string>

    <!-- Strings for deadline in GoalsFragments-->
    <string name="deadlineToday">Дедлайн сьогодні. Поспішіть</string>
    <string name="afterDeadline">Дедлайн був </string>
    <string name="afterDeadlineP2"> дні тому</string>

    <!-- Strings for Goal Dialogs -->
    <string name="makeDoneGoalDialogTitle">Ви дійсно виконали ціль?</string>
    <string name="deleteGoalDialogTitle">Ви дійсно хочете видалити ціль?</string>
    <string name="acceptWithQuestion">Так</string>
    <string name="declineWithQuestion">Ні</string>

    <string name="timeToDeadline">Днів до дедлайну: </string>
    <string name="whenGoalWasDone">Ціль була досягнута </string>

    <string name="doneGoalsTab">Досягнуті</string>
    <string name="inProgressGoalsTab">В процесі</string>

    <string name="youReallyWantDeleteTaskInAllDays">Ви дійсно хочете видалити це завдання у всі дні?</string>

    <!-- Months for DoneGoalList -->
    <string name="January">Січня</string>
    <string name="February">Лютого</string>
    <string name="March">Березня</string>
    <string name="April">Квітня</string>
    <string name="May">Травня</string>
    <string name="June">Червня</string>
    <string name="July">Липня</string>
    <string name="August">Серпня</string>
    <string name="September">Вересня</string>
    <string name="October">Жовтня</string>
    <string name="November">Листопада</string>
    <string name="December">Грудня</string>

    <string name="editTask">Редагувати</string>
    <string name="deleteTask">Видалити в цей день</string>
    <string name="deleteAllTasks">Видалити у всі дні</string>


    <!-- Values for Spinner -->
    <string name="todaysTasks">Завдання на сьогодні</string>
    <string name="tomorrowsTasks">Завдання на завтра</string>
    <string name="chooseDay">Вибрати день</string>

    <string name="goodJob">Молодець. Чудова робота</string>


    <!-- Values for preferences (settings) -->
    <string name="get_premium">Отримати преміум</string>

    <string name="pref_group_system">Система</string>
    <string name="pref_language">Мова</string>
    <string name="pref_choose_language">Оберіть мову</string>
    <string name="pref_theme">Тема</string>
    <string name="pref_choose_theme">Оберіть тему</string>

    <string name="pref_group_notifications">Сповіщення</string>
    <string name="pref_turn_on_notifications">Ввімкнути сповіщення</string>
    <string name="pref_tone">Мелодія</string>
    <string name="pref_choose_tone">Оберіть мелодію</string>
    <string name="pref_vibration">Вібрація</string>
    <string name="pref_remind_about_planning">Нагадування про планування дня</string>
    <string name="pref_set_time">Встановіть час</string>

    <string name="pref_group_other">Інше</string>
    <string name="pref_help">Допомога</string>
    <string name="pref_check_out">Вийти</string>

    <string-array name="tones_array">
        <item>Alarm 1</item>
        <item>Alarm 2</item>
        <item>Alarm 3</item>
        <item>Alarm 4</item>
        <item>Alarm 5</item>
    </string-array>

    <string-array name="languages_array">
        <item>Англійська</item>
        <item>Українська</item>
        <item>Російська</item>
        <item>Французька</item>
        <item>Deutsche</item>
    </string-array>

    <string-array name="themes_array">
        <item>Синя</item>
        <item>Зелена</item>
        <item>Червона</item>
        <item>Рожева</item>
    </string-array>


    <string-array name="tones_array_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="languages_array_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="themes_array_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="repeatText">Встановити повторення</string>

    <!-- Values for Statistic Activity-->
    <string name="statisticFromAllDays">Всього</string>
    <string name="countDoneTasks">Балів за виконані завдання </string>
    <string name="countInProgressTasks">Не отримано балів </string>
    <string name="productivity">Продуктивність </string>
    <string name="productivityInPeriod">Статистика за період </string>
    <string name="from">З</string>
    <string name="to">По</string>
    <string name="showStatistic">Переглянути статистику</string>

    <!--Values for Repeating Dialog Fragment -->
    <string name="repeatTitle">Оберіть повторюваність</string>
    <string name="repeatOnce">Один раз</string>
    <string name="repeatEveryDay">Кожного дня</string>
    <string name="repeatChooseDays">Вибрати дні</string>
    <string name="repeatEveryWeekP1">Повторювати щотижня ( </string>
    <string name="repeatEveryWeekP2">)</string>
    <string name="repeatEveryMonthP1">Повторювати щомісяця (в </string>
    <string name="repeatEveryMonthP2">день місяця)</string>
    <string name="repeatInWeekDays">У будні</string>
    <string name="repeatInWeekEnds">На вихідних</string>
    <string name="daysDialogTitle">Оберіть дні тижня</string>
    <string name="repeatEveryWeek">Повторювати щотижня</string>
    <string name="repeatEveryMonth">Повторювати щомісяця </string>
    <string name="setDayForRepeating">Обрати день</string>

    <string name="notificationTitle">Нагадування</string>

    <string name="search">Пошук</string>

    <string name="timeForPlanning">Настав час планування</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tones_dialog_frag_title">Оберіть мелодію</string>
    <string name="goals_dialog_frag_tones">Виберіть цілі</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_statistic">StatisticActivity</string>

</resources>
