<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/go_to_my_tasks"
            android:icon="@drawable/ic_account"
            android:title="@string/my_tasks" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_goals"
            android:title="@string/nav_goals" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_account"
            android:title="@string/nav_statistic" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/nav_about_us" />
    </group>



</menu>
