<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    /*Settings menu items*/
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_buy_premium"
        android:orderInCategory="100"
        android:title="@string/action_buy_premium"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />

    /* Search button*/
    <item
        android:id="@+id/action_search"
        android:title="@android:string/search_go"
        android:icon="@drawable/icon_toolbar_search"
        yourapp:showAsAction="always|collapseActionView"
        yourapp:actionViewClass="android.support.v7.widget.SearchView" />
</menu>
