<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_statistic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="60dp"
    tools:context="com.eplan.yuraha.easyplanning.StatisticActivity">

    <TextView
        android:text="@string/statisticFromAllDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="14dp"
        android:id="@+id/statisticFromAllDays" />

    <TextView
        android:text="@string/countDoneTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statisticFromAllDays"
        android:layout_alignLeft="@+id/statisticFromAllDays"
        android:layout_alignStart="@+id/statisticFromAllDays"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:id="@+id/countAllDoneTasks" />

    <TextView
        android:text="@string/countInProgressTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countAllDoneTasks"
        android:layout_alignLeft="@+id/countAllDoneTasks"
        android:layout_alignStart="@+id/countAllDoneTasks"
        android:layout_marginTop="18dp"
        android:id="@+id/countAllInProgressTasks" />

    <TextView
        android:text="@string/productivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countAllInProgressTasks"
        android:layout_alignLeft="@+id/countAllInProgressTasks"
        android:layout_alignStart="@+id/countAllInProgressTasks"
        android:layout_marginTop="16dp"
        android:id="@+id/overallProductivity" />

    <TextView
        android:text="@string/productivityInPeriod"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countAllInProgressTasks"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:id="@+id/productivityInPeriodTitle" />

    <Button
        android:text="@string/to"
        android:layout_width="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:id="@+id/toDateButton"
        android:layout_alignBaseline="@+id/fromDateButton"
        android:layout_alignBottom="@+id/fromDateButton"
        android:layout_toRightOf="@+id/countAllInProgressTasks"
        android:layout_toEndOf="@+id/countAllInProgressTasks" />

    <Button
        android:text="@string/showStatistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/showStatisticButton"
        android:layout_below="@+id/toDateButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/fromDateButton"
        android:layout_below="@+id/productivityInPeriodTitle"
        android:layout_alignLeft="@+id/countInProgressTasksInPeriod"
        android:layout_alignStart="@+id/countInProgressTasksInPeriod"
        android:layout_marginTop="19dp" />

    <TextView
        android:text="@string/countDoneTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countDoneTasksInPeriod"
        android:layout_below="@+id/showStatisticButton"
        android:layout_alignLeft="@+id/statisticFromAllDays"
        android:layout_alignStart="@+id/statisticFromAllDays"
        android:layout_marginTop="19dp" />

    <TextView
        android:text="@string/productivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/productivityInPeriod"
        android:layout_below="@+id/countInProgressTasksInPeriod"
        android:layout_alignLeft="@+id/countDoneTasksInPeriod"
        android:layout_alignStart="@+id/countDoneTasksInPeriod" />

    <TextView
        android:text="@string/countInProgressTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countInProgressTasksInPeriod"
        android:layout_below="@+id/countDoneTasksInPeriod"
        android:layout_alignLeft="@+id/productivityInPeriod"
        android:layout_alignStart="@+id/productivityInPeriod" />

</RelativeLayout>
